<resources>
    <string name="app_name">iExpens</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_overview">Overview</string>
    <string name="title_wallet">Wallet</string>

    <string name="BillNameNotAvailable">Bill Name is Empty. Please enter name for the Bill</string>
    <string name="BillAmountNotAvailable">Bill Amount is Empty. Please enter Bill Amount</string>
    <string name="BillDueDateNotAvailable">Bill Due Date is Empty. Please enter Bill Due Date</string>
    <string name="BillSavedSuccesfully">Bill Saved Succesfully to the account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="_0">0%</string>
    <string name="click_me">Click me</string>
    <string name="click_me_to_increment">Click me to increment</string>
    <string name="amount">Amount</string>
    <string name="add_bills">Add Bills</string>
    <string name="wallet">Wallet</string>
    <string name="overview">overview</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Account_Types">
        <item>Savings</item>
        <item>Current</item>
        <item>Cash</item>
    </string-array>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="iexpens">IExpens</string>

    <string name="add_new_account">Add New Account</string>
    <string name="account_name">Please enter Account Holder Name</string>
    <string name="account_amount">Please enter Amount</string>
    <string name="account_number">Please enter Account Number</string>
    <string name="account_added">Account is added Successfully</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete_account">Delete Account</string>

    <array name="Banks">
        <item>SEB</item>
        <item>Nordea</item>
        <item>DNB</item>
    </array>

    <array name="Acct_type">
        <item>Savings</item>
        <item>Current</item>
    </array>

    <string name="new_category">New Category</string>
    <string name="switch_view">Switch view</string>
    <string name="category_name">Category Name</string>

    <string name="cash">Cash</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>


    <string name="input_category_name">Input Category name.</string>
    <string name="delete_category">Delete</string>
    <string name="search_category">search</string>

    <string name="choose_category_hint">Choose Category</string>
    <string name="price_hint">Price</string>
    <string name="description_hint">Description</string>
    <string name="expense_date_hint">Date</string>
    <string name="insert_expense">Add Expense</string>

    <array name="category">
        <item>Rent</item>
        <item>Transport</item>
        <item>ChildCare</item>
        <item>Dining</item>
        <item>Entertainment</item>
        <item>Gifts</item>
        <item>Health</item>
        <item>Personal Care</item>
        <item>Maintenance</item>
        <item>Insurance</item>
        <item>Loan</item>
        <item>Medical</item>
        <item>Tax</item>
        <item>Shopping</item>
        <item>Utilities</item>
        <item>Education</item>
        <item>Miscellaneous</item>

    </array>
</resources>
